--- a/style.css
+++ b/style.css
@@ -3,6 +3,46 @@ body {
   color: darkred;
 }
 
+header {
+  background: lightblue;
+  border: 2px solid red;
+  border-radius: 10px;
+  margin: 20px;
+  padding: 20px;
+  display: block;
+}
+
+#section1 {
+  background: lightgreen;
+  border: 2px solid red;
+  border-radius: 10px;
+  margin: 20px;
+  padding: 20px;
+  width: 50%;
+  float: left;
+}
+
+#section2 {
+  background: lightyellow;
+  border: 2px solid red;
+  border-radius: 10px;
+  margin: 20px;
+  padding: 20px;
+  width: 35%;
+  display: inline-block;
+  float: right;
+}
+
+footer {
+  background: lightblue;
+  border: 2px solid red;
+  border-radius: 10px;
+  margin: 20px;
+  padding: 20px;
+  clear: both;
+  text-align: center;
+}
+
 h1, h2 {
   font-family: Arial, "Helvetica Neue", Helvetica, sans-serif;
 }
