--- a/style.css
+++ b/style.css
@@ -1,59 +1,65 @@
+* {
+  border: 1px solid red;
+  border-radius: 5px;
+}
+
 body {
   background-color: lightgray;
   color: darkred;
 }
 
 header {
-  background: lightblue;
-  border: 2px solid red;
-  border-radius: 10px;
-  margin: 20px;
-  padding: 20px;
+  background-color: lightblue;
+  margin: 10px;
+  padding: 10px;
   display: block;
 }
 
-#section1 {
-  background: lightgreen;
-  border: 2px solid red;
-  border-radius: 10px;
-  margin: 20px;
-  padding: 20px;
-  width: 50%;
+#content {
+  display: inline-block;
   float: left;
+  width: 70%;
 }
 
-#section2 {
-  background: lightyellow;
-  border: 2px solid red;
-  border-radius: 10px;
-  margin: 20px;
-  padding: 20px;
-  width: 35%;
+section {
+  background-color: lightyellow;
+  margin: 10px;
+  padding: 10px;
+  //width: 35%;
+  //display: inline-block;
+  //float: right;
+}
+
+article {
+  background-color: lightgreen;
+  margin: 10px;
+  padding: 10px;
+}
+
+aside {
   display: inline-block;
   float: right;
+  width: 25%;
 }
 
 footer {
-  background: lightblue;
-  border: 2px solid red;
-  border-radius: 10px;
-  margin: 20px;
-  padding: 20px;
+  background-color: lightblue;
+  margin: 10px;
+  padding: 10px;
   clear: both;
   text-align: center;
 }
 
-h1, h2 {
+h1, h2, h3, p, ul, ol, li {
   font-family: Arial, "Helvetica Neue", Helvetica, sans-serif;
-}
-
-p, ul {
   color: darkblue;
   line-height: 1.4em;
 }
 
+/*
 .code {
   font-family: "Courier New", Courier, "Lucida Sans Typewriter", "Lucida Typewriter", monospace;
   background-color: black;
   color: green;
 }
+*/
