--- a/style.css
+++ b/style.css
@@ -1,50 +1,71 @@
 * {
-  border: 1px solid red;
-  border-radius: 5px;
+  /*border: 1px solid red;*/
+  -webkit-box-sizing: border-box;
+     -moz-box-sizing: border-box;
+          box-sizing: border-box;
 }
 
 body {
-  background-color: lightgray;
-  color: darkred;
+  background-color: black;
+  margin: 0;
 }
 
 header {
   background-color: lightblue;
-  margin: 10px;
+  /*margin: 0 auto;*/
   padding: 10px;
-  display: block;
+  /*display: block;*/
 }
 
 #content {
+  background-color: lightgray;
+  margin: 0 auto;
+  padding: 0;
+  width: 66.6%;
+  /*max-width: 800px;*/
   display: inline-block;
+  /*vertical-align: top;*/
+  /*position: relative;*/
   float: left;
-  width: 70%;
 }
 
 section {
-  background-color: lightyellow;
-  margin: 10px;
-  padding: 10px;
-  //width: 35%;
-  //display: inline-block;
-  //float: right;
+  background-color: lightgreen;
+  margin: 0 auto;
+  padding: 10px 0;
+  width: 95%;
+  /*display: inline-block;*/
+  /*float: right;*/
 }
 
 article {
-  background-color: lightgreen;
-  margin: 10px;
+  background-color: lightyellow;
+  margin: 10px auto;
   padding: 10px;
+  width: 95%;
 }
 
 aside {
+  background-color: purple;
+  /*max-width: 600px;*/
+  width: 33.3%;
+  margin: 0 auto;
+  padding: 10px;
   display: inline-block;
+  /*vertical-align: top;*/
+  /*position: fixed;*/
   float: right;
-  width: 25%;
+  /*width: 25%;*/
+}
+
+#aside-section-1 {
+  /*margin: 0 auto;*/
+  margin-bottom: 10px;
 }
 
 footer {
   background-color: lightblue;
-  margin: 10px;
+  /*margin: 10px;*/
   padding: 10px;
   clear: both;
   text-align: center;
@@ -52,7 +73,7 @@ footer {
 
 h1, h2, h3, p, ul, ol, li {
   font-family: Arial, "Helvetica Neue", Helvetica, sans-serif;
-  color: darkblue;
+  color: black;
   line-height: 1.4em;
 }
 
