--- a/css/style.css
+++ b/css/style.css
@@ -6,7 +6,7 @@
 }
 
 body {
-  background-color: lightgray;
+  background-color: black;
   margin: 0;
 }
 
@@ -17,10 +17,10 @@ header {
   /*display: block;*/
 }
 
-.content {
-  /*background-color: lightgray;*/
+#content {
+  background-color: lightgray;
   margin: 0 auto;
-  padding: 10px 0 0 0;
+  padding: 0;
   width: 66.6%;
   /*max-width: 800px;*/
   display: inline-block;
@@ -34,7 +34,6 @@ section {
   margin: 0 auto;
   padding: 10px 0;
   width: 95%;
-  box-shadow: 0 0 10px #777777;
   /*display: inline-block;*/
   /*float: right;*/
 }
@@ -44,13 +43,12 @@ article {
   margin: 10px auto;
   padding: 10px;
   width: 95%;
-  box-shadow: 0 0 10px #777777;
 }
 
 aside {
-  background-color: lightgray;
+  background-color: purple;
   /*max-width: 600px;*/
-  width: 33.4%;
+  width: 33.3%;
   margin: 0 auto;
   padding: 10px;
   display: inline-block;
